hphp/test/zend/bad/Zend/tests/bug44827.php
<?php
define('foo::bar', 1);
define('::', 1);
?>